Added CreateDate to Post and Comment. Futher improve views and prezentation of images in Post. Remove Privacy view.

--- a/MiniaturesGallery/Views/Comments/Index.cshtml
+++ b/MiniaturesGallery/Views/Comments/Index.cshtml
@@ -20,6 +20,9 @@
                 @Html.DisplayNameFor(model => model.Body)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.CrateDate)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.PostID)
             </th>
             <th>
@@ -39,6 +42,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Body)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CrateDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PostID)
