--- a/MiniaturesGallery/Views/Posts/Index.cshtml
+++ b/MiniaturesGallery/Views/Posts/Index.cshtml
@@ -19,6 +19,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Text)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CrateDate)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -30,6 +33,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Text)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CrateDate)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
