--- a/MiniaturesGallery/Views/Posts/Details.cshtml
+++ b/MiniaturesGallery/Views/Posts/Details.cshtml
@@ -149,7 +149,7 @@
                     break;
             }
         }
-        <form asp-action="@action" asp-controller="Rates" method="post">
+        <form asp-action="@action" asp-controller="Rates" method="post" asp-route-postId="@Model.ID">
             <div class="text-center">
                 Rating: @Model.Rating.ToString("n2") (@Model.NoOfRates.ToString())
             </div>
