--- a/MiniaturesGallery/Views/Posts/Edit.cshtml
+++ b/MiniaturesGallery/Views/Posts/Edit.cshtml
@@ -113,8 +113,7 @@
     <hr />
 
     <div class="col-md-4">
-        <form asp-action="AddAttachment" enctype="multipart/form-data">
-            <input type="hidden" name="id" value="@Model.Post.ID" />
+        <form asp-action="AddAttachment" asp-route-id="@Model.Post.ID" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Add Photo:</label>
